--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ button {
 
     <div id="photo">
         <h2>Us. Right Here. 💞</h2>
-        <img src="YOUR_IMAGE_URL_HERE" alt="Us together">
+        <img src="us.jpg" alt="Us together">
     </div>
 </div>
 
@@ -200,3 +200,4 @@ function celebrate() {
 
 </body>
 </html>
+
